--- a/Apples.html
+++ b/Apples.html
@@ -25,12 +25,16 @@
 
 <script src="app.js"></script>
 
-<div class="box">
-    <img src="appleface.jpg" alt="appleface">
+<div class="spacer">
+
 </div>
 
 <div class="box">
     <img src="angryorange.jpg" alt="angryorange">
+</div>
+
+<div class="box">
+    <img src="appleface.jpg" alt="appleface">
 </div>
 
 
