--- a/index.html
+++ b/index.html
@@ -23,8 +23,12 @@
 
     <script src="app.js"></script>
 
+    <div class="spacer">
+
+    </div>
+
 <div class="box">
-    <img src="appleface.jpg" alt="appleface">
+    <img src="oragnecartoon.png" alt="cartoon">
 </div>
 
 <div class="box">
