--- a/Oranges.html
+++ b/Oranges.html
@@ -16,6 +16,10 @@
     </div>
 </nav>
 
+<div class="spacer">
+
+</div>
+
 <div class="menu">
     <a href="index.html">Home</a>
     <a href="Apples.html">Apples</a>
