--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <div class="bar"></div>
                 <div class="bar"></div>
             </div>
-    </nav>
+
 
     <div class="menu">
         <a href="index.html">Home</a>
@@ -20,6 +20,7 @@
         <a href="Oranges.html">Oranges</a>
         
     </div>
+    </nav>
 
     <script src="app.js"></script>
 
@@ -28,7 +29,7 @@
     </div>
 
 <div class="box">
-    <img src="oragnecartoon.png" alt="cartoon">
+    <img src="appleface.jpg" alt="appleface">
 </div>
 
 <div class="box">
